--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "typescript": "^5.3.0",
+    "typescript": "~5.2.2",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.0"
   }
